Fixed images on safari

--- a/client/scripts/views/pages/landing/chains_crowdfunding.scss
+++ b/client/scripts/views/pages/landing/chains_crowdfunding.scss
@@ -20,9 +20,9 @@ section.ChainsCrowdfunding {
   }
 
   .ChainsImage {
-    margin-top: -3rem;
+    margin-top: -2.3rem;
 
-    @media (max-width: 1000px) {
+    @media (min-width: 0px) and (max-width: 1200px) {
       margin-top: 0rem;
     }
 
