--- a/client/scripts/views/pages/landing/tokens_creators.scss
+++ b/client/scripts/views/pages/landing/tokens_creators.scss
@@ -21,7 +21,7 @@ img.TokensCreatorsImage {
   margin-left: 3rem;
   margin-top: 1rem;
 
-  @media (max-width: 1000px) {
+  @media (min-width: 0px) and (max-width: 1200px) {
     margin-left: 0rem;
   }
 }
